Fix dark mode for several elements

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -153,11 +153,11 @@ footer {
 
 /* Dark Mode Stylings */
 
-.darkmode, .fas.darkmode {
-    color: $darkModeText;
+.darkmode, .fas.darkmode, .text-secondary.darkmode {
+    color: $darkModeText!important;
 }
 
-.alert-warning.darkmode {
+.alert-warning.darkmode, .list-group-item.active.darkmode {
     background-color: #f9e7c950!important;
 }
 
@@ -165,18 +165,23 @@ footer {
     background-color: #dcf3f850!important;
 }
 
-.btn.darkmode {
+.btn.darkmode, .card-block.darkmode {
     background-color: $darkModeBackground;
+}
+
+.breadcrumb-item.active.darkmode {
+    color: #bbbbbb;
+}
+
+.card-header.darkmode, .list-group-item.darkmode {
+    background-color: #131110;
+    border: 1px solid rgba(255,255,255,.125);
+
 }
 
 .dropdown-menu.darkmode {
     background-color: $darkModeBackground;
     border: 1px solid #b3b3b3;
-}
-
-.list-group-item.darkmode {
-    background-color: $darkModeBackground;
-    border: 1px solid rgba(255,255,255,.125);
 }
 
 body.darkmode {
